recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:7: error: identifier expected but ')' found.
    avance(length.)
                  ^Spiral:8: error: identifier expected but ')' found.
    gauche(increment.)
                     ^